--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "npx expo start",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
-    "web": "npx expo start --web"
+    "web": "npx expo start --web",
+    "build:apk": "NODE_ENV=production npx expo run:android --variant release --no-build-cache",
+    "build:apk:standalone": "cd android && ./gradlew assembleRelease",
+    "build:apk-debug": "cd android && ./gradlew assembleDebug",
+    "build:aab": "cd android && ./gradlew bundleRelease",
+    "prebuild:clean": "cd android && ./gradlew clean",
+    "apk:install": "adb install -r android/app/build/outputs/apk/release/app-release.apk",
+    "apk:path": "echo '\n📦 Release APK location:\nandroid/app/build/outputs/apk/release/app-release.apk\n\n✅ This APK is standalone (no Metro needed).\n\nInstall with: npm run apk:install\nOr copy to device and install manually.\n'"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.2",
@@ -23,10 +29,13 @@
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
